# omero-metrics

./: .dockerignore  .gitignore  .nojekyll  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  configuration_omero.sh  docker-compose.yaml  pyproject.toml  pytest.ini  release-please-config.json  requirements.txt  setup.py  test.txt
.github/workflows/: codeql.yml  omero_plugin.yml  publish.yml  publish_pypi.yml  release-please.yml
.omeroci/: app-config
.omerocli/: app-config
OMERO-metrics/: middleware.py  urls.py  views.py
OMERO-metrics/dash_apps/: dash_apps.py  dash_dataset_psf_beads.py  dash_image_psf_beads.py
OMERO-metrics/tools/: dump.py  load.py  omero_tools.py  update.py
OMERO_metrics/: OMERO_metrics_ settings.py  OMERO_metrics_settings.py  __init__.py  apps.py  forms.py  middleware.py  settings.py  styles.py  test.ipynb  urls.py  views.py
OMERO_metrics/dash_apps/: dash_dataset.py  dash_dataset_foi.py  dash_dataset_form.py  dash_dataset_metrics.py  dash_dataset_psf_beads.py  dash_feedback.py  dash_form_config.py  dash_forms.py  dash_group.py  dash_image.py  dash_image_foi.py  dash_image_psf_beads.py  dash_microscope.py  dash_project.py  foi_apps.py  plotly_apps.py
OMERO_metrics/tools/: dash_forms_tools.py  data_managers.py  data_preperation.py  data_type.py  delete.py  dump.py  load.py  old_functions.py  omero_tools.py  process.py  update.py
config_files/: config.omero
docker_setup/omero-web/: requirements.txt
docs/dev_docs/: running_tests_locally.md  technical_doc.md
docs/flowcharts/: configure_flowchart.mmd
docs/slides/: .gitignore  _quarto.yaml  custom.scss  flowchart.mmd  logo.css
etc/: ice.config
etc/grid/: config.xml
omero_metrics/: .pre-commit-config.yaml  __init__.py  apps.py  dash_apps.py  forms.py  middleware.py  plotly_apps.py  psf_view_sim.py  styles.py  tools.py  urls.py  views.py
omero_metrics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
omero_metrics/dash_apps/: dash_apps.py  dash_dataset.py  dash_dataset_metrics.py  dash_dataset_psf_beads.py  dash_feedback.py  dash_group.py  dash_image.py  dash_image_psf_beads.py  dash_image_render.py  dash_microscope.py  dash_project.py  dash_project_render.py  foi_apps.py  plotly_apps.py
omero_metrics/tools/: __init__.py  context_loaders.py  dash_forms_tools.py  data_managers.py  data_preperation.py  data_type.py  delete.py  dump.py  load.py  omero_tools.py  process.py  serializers.py  test.ipynb  update.py
test/: conftest.py
test/integration/: structure_generator.py  test_apps.py  test_dash.py  test_data_managers.py  test_index.py  test_views.py
test/omero-server/: Dockerfile  server_structure.yaml  structure_generator.py
test/omero-web/: 98-dash-migrate.sh  Dockerfile  omero-metrics-entrypoint.sh  requirements.txt
test/test_dash/: test_apps.py  test_dash_app.py  test_dpd_demo.py  test_dpd_direct.py
test/unit/: conftest.py  pytest.ini  test_data_type.py  test_delete.py  test_load.py  test_middleware.py  test_serializers.py  test_views.py  (+1 more)
(+103 files in other folders)
