[build-system]
requires = ["poetry-core>=1.7.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "omero-metrics"
description = "An OMERO webapp to follow microscope performance over time"
authors = [
    {name = "Julio Mateos Langerak", email = "julio.mateos-langerak@igh,cnrs.fr"},
    {name = "Oumou Dhmine", email = "oumoudhmine@gmail.com"}
]
maintainers = [
    {name = "Julio Mateos Langerak", email = "julio.mateos-langerak@igh,cnrs.fr"},
    {name = "Oumou Dhmine", email = "oumoudhmine@gmail.com"}
]
keywords = ["microscopy", "metrology", "OMERO"]
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.9.18,<=3.11"
dynamic = [
    "version",
    "classifiers",
    "dependencies",
]

[project.urls]
homepage = "https://github.com/MontpellierRessourcesImagerie/OMERO-metrics"
repository = "https://github.com/MontpellierRessourcesImagerie/OMERO-metrics"
documentation = "https://montpellierressourcesimagerie.github.io/OMERO-metrics/"

[tool.poetry]
packages = [
    { include = "OMERO_metrics" },
]
requires-poetry = ">=2.0"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Processing"
]
version = "0.0.0"

[tool.poetry.dependencies]
omero-web = ">=5.26.0"
bootstrap4 = "*"  # Verify this dependency
django-plotly-dash = "2.4.0"  # current 2.4.6
dash = "<=2.12"  # current 3.0.4
plotly = "5.20.0"  # current 6.1.2
dpd_static_support = "0.0.5"
dash-bootstrap-components = "*"  # current "2.0.3"
django-bootstrap4 = "*"  # current 25.1
dash-mantine-components = "0.14.5"  # current 1.3.0
dash-iconify = "*"  # current "0.1.2"
openpyxl = "*"  # TODO: remove dependency
dash-renderer = "*"  # current "1.9.1"
microscopemetrics = "0.2.3"
zeroc-ice = {url = "https://github.com/glencoesoftware/zeroc-ice-py-linux-x86_64/releases/download/20240202/zeroc_ice-3.6.5-cp310-cp310-manylinux_2_28_x86_64.whl"}

[tool.poetry.group.test.dependencies]
pytest = "^8"
pytest-django = "4.11.1"
hypothesis = "^6"

[tool.poetry.group.dev.dependencies]
black = "^25"
poetry = "^2"
isort = "^6"
pre-commit = "^4"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = ">=1.5.2"  # current 1.8.2

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
#strict = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "omeroweb.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.isort]
profile = "black"


